# docker-flask-example

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  compose.yaml  customize  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt  run
.github/workflows/: ci.yml
assets/: package.json  tailwind.config.js  webpack.config.js
config/: gunicorn.py  settings.py
db/: env.py  seeds.py
hello/: app.py  extensions.py
hello/blueprints/page/: views.py
hello/health/: views.py
hello/page/: views.py
hello/page/templates/page/: home.html
hello/templates/layouts/: index.html
hello/up/: views.py
lib/: test.py
test/: conftest.py
test/blueprints/page/: test_views.py
test/hello/: test_json_logging.py
test/hello/health/: test_views.py
test/hello/page/: test_views.py
test/hello/up/: test_views.py
