[project]
name = "hello"
version = "0.1.0"
description = "An example Flask app running in Docker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.18.4",
  "celery==5.6.2",
  "flask==3.1.3",
  "flask-db==0.4.1",
  "flask-debugtoolbar==0.16.0",
  "flask-secrets==0.1.0",
  "flask-sqlalchemy==3.1.1",
  "flask-static-digest==0.4.1",
  "gunicorn==25.1.0",
  "jinja2==3.1.6",
  "psycopg==3.3.3",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "redis==7.2.1",
  "ruff==0.15.4",
  "setuptools==82.0.0",
  "sqlalchemy==2.0.47",
  "sqlalchemy-utils==0.42.1",
  "werkzeug==3.1.6",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]
